--- a/Quiz_Vlajky/Quiz_Vlajky/Page1.xaml
+++ b/Quiz_Vlajky/Quiz_Vlajky/Page1.xaml
@@ -35,10 +35,10 @@
             HorizontalOptions="Center"
             FontSize="Large"
             TextColor="White"/>
-        <ImageButton Source="Belgium.png" Grid.Row="2" Grid.Column="0" Margin="20, 10, 20, 10"/>
-        <ImageButton Source="Sweden.png" Grid.Row="2" Grid.Column="1" Margin="20, 10, 20, 10"/>
-        <ImageButton Source="France.png" Grid.Row="3" Grid.Column="0" Margin="20, 10, 20, 10"/>
-        <ImageButton Source="Hungary.png" Grid.Row="3" Grid.Column="1" Margin="20, 10, 20, 10"/>
+        <ImageButton Source="Belgium.png" Grid.Row="2" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_5"/>
+        <ImageButton Source="Sweden.png" Grid.Row="2" Grid.Column="1" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_6"/>
+        <ImageButton Source="France.png" Grid.Row="3" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_7"/>
+        <ImageButton Source="Hungary.png" Grid.Row="3" Grid.Column="1" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_8"/>
     </Grid>
 
 </ContentPage>
