--- a/Quiz_Vlajky/Quiz_Vlajky/MainPage.xaml
+++ b/Quiz_Vlajky/Quiz_Vlajky/MainPage.xaml
@@ -36,10 +36,10 @@
             HorizontalOptions="Center"
             FontSize="Large"
             TextColor="White"/>
-        <ImageButton Source="Slovakia.png" Grid.Row="2" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked"/>
-        <ImageButton Source="Czech_Republic.png" Grid.Row="2" Grid.Column="1" Margin="20, 10, 20, 10"/>
-        <ImageButton Source="Netherlands.png" Grid.Row="3" Grid.Column="0" Margin="20, 10, 20, 10"/>
-        <ImageButton Source="Estonia.png" Grid.Row="3" Grid.Column="1" Margin="20, 10, 20, 10"/>
+        <ImageButton Source="Slovakia.png" Grid.Row="2" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_1"/>
+        <ImageButton Source="Czech_Republic.png" Grid.Row="2" Grid.Column="1" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_2"/>
+        <ImageButton Source="Netherlands.png" Grid.Row="3" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_3"/>
+        <ImageButton Source="Estonia.png" Grid.Row="3" Grid.Column="1" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_4"/>
     </Grid>
 
 </ContentPage>
