--- a/Quiz_Vlajky/Quiz_Vlajky/Page4.xaml
+++ b/Quiz_Vlajky/Quiz_Vlajky/Page4.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Quiz_Vlajky.Page3">
+             x:Class="Quiz_Vlajky.Page4">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
@@ -32,21 +32,21 @@
         <Label
             Grid.Row="1"
             Grid.Column="1"
-            Text="4/10"
+            Text="5/10"
             TextColor="White"
             FontSize="Large"
             Margin="70, 0, 0, 0"/>
 
         <Label
             Grid.Row="1"
-            Text="Ukraine"
+            Text="Russia"
             HorizontalOptions="Center"
             FontSize="Large"
             TextColor="White"/>
-        <ImageButton Source="Spain.png" Grid.Row="2" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_13"/>
-        <ImageButton Source="United_Kingdom.png" Grid.Row="2" Grid.Column="1" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_14"/>
-        <ImageButton Source="Ukraine.png" Grid.Row="3" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_15"/>
-        <ImageButton Source="Germany.png" Grid.Row="3" Grid.Column="1" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_16"/>
+        <ImageButton Source="Ireland.png" Grid.Row="2" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_17"/>
+        <ImageButton Source="Albania.png" Grid.Row="2" Grid.Column="1" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_18"/>
+        <ImageButton Source="Russia.png" Grid.Row="3" Grid.Column="0" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_19"/>
+        <ImageButton Source="Romania.png" Grid.Row="3" Grid.Column="1" Margin="20, 10, 20, 10" Clicked="ImageButton_Clicked_20"/>
     </Grid>
 
 </ContentPage>
